--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <link rel="icon" type="image/png" href="/favicon.png?v=1730470481" sizes="32x32">
     <link rel="icon" type="image/png" href="/favicon-120.png?v=1730470481" sizes="120x120">
 
-    <link href="/vendors/vendors.min.css" rel="stylesheet">
-    <link href="/css/custom.css" rel="stylesheet">
+    <link href="./vendors/vendors.min.css" rel="stylesheet">
+    <link href="./css/custom.css" rel="stylesheet">
     <script>const appData = {"statuses":{"-1":"forbidden","0":"ok","1":"fail","2":"wait"},"callbacks":{"validateOrder":"\/api\/validate\/validateOrder?key=59a478c264cb6ee8c1fa2b9ee6c65136","sendOrder":"\/api\/request\/sendOrder?key=3dc1929c618c8b12bdd32bf4e5cd23ec","sendTracking":"\/api\/request\/sendTracking?key=3dc1929c618c8b12bdd32bf4e5cd23ec","sendEmailTracking":"\/api\/request\/sendEmailTracking?key=3dc1929c618c8b12bdd32bf4e5cd23ec"}};</script></head>
 <body class="ru w-buttons">
 
