--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <meta property="og:title" content="Завод опалубочных систем. Продажа опалубки напрямую с завода!" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Завод опалубочных систем. Продажа опалубки напрямую с завода!">
-    <meta property="og:url" content="https://xn----7sbbecmsori3acn2d.xn--p1ai/" />
+    <meta property="og:url" content="https://github.com/AvdalyanAnna/newTest1" />
 
     <link rel="shortcut icon" href="/favicon.ico?v=1730470481" />
-    <link rel="icon" type="image/png" href="/favicon.png?v=1730470481" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicon-120.png?v=1730470481" sizes="120x120">
+    <link rel="icon" type="image/png" href="./favicon.png?v=1730470481" sizes="32x32">
+    <link rel="icon" type="image/png" href="./favicon-120.png?v=1730470481" sizes="120x120">
 
     <link href="./vendors/vendors.min.css" rel="stylesheet">
     <link href="./css/custom.css" rel="stylesheet">
@@ -1638,8 +1638,8 @@
     })(window, document, 'script', 'cloud.roistat.com', 'f023f32e28eb5a14a9f3a66880675a5a');
 </script>
 
-<script src="/vendors/vendors.min.js?v=1730470492"></script>
-<script src="/js/custom.js"></script>
+<script src="./vendors/vendors.min.js?v=1730470492"></script>
+<script src="./js/custom.js"></script>
 <script src="/assets/ba6e91fb/yii.js?v=1730472536"></script>
 <script src="/assets/ba6e91fb/yii.activeForm.js?v=1730472536"></script>
 <script>const xDataLegacy={"api":{"tracking":{"url":"\/api\/request\/sendTracking?key=3dc1929c618c8b12bdd32bf4e5cd23ec"},"emailtracking":{"url":"\/api\/request\/sendEmailTracking?key=3dc1929c618c8b12bdd32bf4e5cd23ec","class":".email-tracking"}}};const xRequestLegacy = {
